Import of SALVA/Scalar-Quote-0.24 from CPAN.
gitpan-cpan-distribution: Scalar-Quote
gitpan-cpan-version:      0.24
gitpan-cpan-path:         SALVA/Scalar-Quote-0.24.tar.gz
gitpan-cpan-author:       SALVA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,13 @@
 Revision history for Perl extension Scalar::Quote.
 
-0.22  Apr 12 2004
+0.24  Nov 16 2005
+	- algorithm to search for diffs in strings optimized.
+
+0.23  Jun 16 2005
+	- uninitialized warnings supressed
+	- print numbers as floats instead of as integers
+
+0.22  Apr 12 2005
 	- general clean up
 	- tests added
 	- restructured docs
