Import of SALVA/Scalar-Quote-0.25 from CPAN.
gitpan-cpan-distribution: Scalar-Quote
gitpan-cpan-version:      0.25
gitpan-cpan-path:         SALVA/Scalar-Quote-0.25.tar.gz
gitpan-cpan-author:       SALVA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Scalar::Quote.
 
+0.25  Dec 20 2005
+	- corrected bug on str_diffix
+
 0.24  Nov 16 2005
 	- algorithm to search for diffs in strings optimized.
 
