Import of SALVA/Scalar-Quote-0.26 from CPAN.
gitpan-cpan-distribution: Scalar-Quote
gitpan-cpan-version:      0.26
gitpan-cpan-path:         SALVA/Scalar-Quote-0.26.tar.gz
gitpan-cpan-author:       SALVA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Scalar::Quote.
 
+0.26  Nov 25 2006
+        - unicode chars were not escaped
+
 0.25  Dec 20 2005
 	- corrected bug on str_diffix
 
